<resources>
    <string name="app_name">Hipla Retails</string>
    <string name="signup">Sign Up</string>
    <string name="signin">Sign In</string>
    <string name="splash_desc">Feel the most amazing shopping experience</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="email_address">Email Address</string>
    <string name="password">*****</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_up_s">Sign Up</string>
    <string name="title_activity_base_main">BaseMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="remember_me">Remember me</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shop_by_store">Shop by store</string>
    <string name="recommended">Recommended</string>
    <string name="favourites">Favourites</string>
    <string name="recently_browsed">Recently Browsed</string>
    <string name="phone_number">Phone Number</string>
    <string name="first_name">First Name</string>
    <string name="user_name">User Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="pincode">Pincode</string>
    <string name="navigate">Navigate</string>
    <string name="out_of_stock">OUT OF STOCK</string>
</resources>
