<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <variable
            name="activity"
            type="com.fnspl.hiplaretails.activity.SignUpActivity" />


    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:onClick="setupUI"
        tools:context=".activity.SignUpActivity">

        <com.fnspl.hiplaretails.view.TextViewRegular
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentTop="true"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/sign_in_title"
            android:textSize="@dimen/text_medium_extra" />

        <View
            android:id="@+id/view_space"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_below="@+id/tv_title"
            android:background="@color/white_light_medium" />

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_space"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginLeft="@dimen/_30sdp"
                android:layout_marginRight="@dimen/_30sdp"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/_100sdp"
                    android:contentDescription="@null"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:src="@drawable/hipla_retail_logo" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/email_icon"
                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/email_address"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:padding="@dimen/_8sdp"
                        android:text=""
                        android:background="@color/white"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/mobile_icon"

                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone_number"
                        android:text=""
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:imeOptions="actionNext"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/password_icon"

                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:text=""
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/user_icon"
                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_f_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/first_name"
                        android:text=""
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/user_icon"
                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_l_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/last_name"
                        android:text=""
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:imeOptions="actionNext"
                        android:inputType="textCapSentences"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/location_icon"

                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/address"
                        android:text=""
                        android:layout_marginLeft="@dimen/_3sdp"
                        android:imeOptions="actionNext"
                        android:inputType="text"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>




                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_4sdp"
                    android:background="@color/white_light_medium"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    >

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:src="@drawable/pincode_icon"
                        />
                    <com.fnspl.hiplaretails.view.EditTextRegular
                        android:id="@+id/et_pin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pincode"
                        android:text=""
                        android:layout_marginLeft="@dimen/_5sdp"
                        android:imeOptions="actionDone"
                        android:inputType="phone"
                        android:maxLength="7"
                        android:background="@color/white"
                        android:padding="@dimen/_8sdp"
                        android:textSize="@dimen/text_medium" />
                </LinearLayout>


                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginBottom="@dimen/_12sdp"
                    android:background="@color/white_light_medium"/>



                <com.fnspl.hiplaretails.view.TextViewLight
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_25sdp"
                    android:background="@drawable/splash_btn_background_light_blue"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:onClick="@{()->activity.signUp()}"
                    android:padding="@dimen/_10sdp"
                    android:text="@string/sign_up_s"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_medium_extra" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>




    </RelativeLayout>
</layout>